Support analyzing data in indexNode
Signed-off-by: Cai Zhang <cai.zhang@zilliz.com>

--- a/internal/core/src/indexbuilder/CMakeLists.txt
+++ b/internal/core/src/indexbuilder/CMakeLists.txt
@@ -12,9 +12,11 @@
 
 set(INDEXBUILDER_FILES
         VecIndexCreator.cpp
+        analysis_c.cpp
         index_c.cpp
         init_c.cpp
         ScalarIndexCreator.cpp
+        KmeansMajorCompaction.cpp
         )
 
 milvus_add_pkg_config("milvus_indexbuilder")
